# quantum-from-scratch

./: .gitignore  README.md  pyproject.toml
notebooks/: 00_what_is_a_qubit.py  01_many_qubits_and_entanglement.py  02_circuits_and_interference.py  03_grovers_search.py  04_the_quantum_fourier_transform.py  05_phase_estimation.py  06_shors_algorithm.py  07_scaling_the_simulator.py  08_mixed_states_and_the_density_matrix.py  09_noise_and_decoherence.py  10_quantum_error_correction.py  11_the_engine_in_full.py  12_epilogue_measure_and_meaning.py
posts/: 00-what-is-a-qubit.md  01-many-qubits-and-entanglement.md  02-circuits-and-interference.md  03-grovers-search.md  04-the-quantum-fourier-transform.md  05-phase-estimation.md  06-shors-algorithm.md  07-scaling-the-simulator.md  08-mixed-states-and-the-density-matrix.md  09-noise-and-decoherence.md  10-quantum-error-correction.md  11-the-engine-in-full.md  12-epilogue-measure-and-meaning.md
qfs/: __init__.py  channels.py  circuit.py  dense.py  density.py  gates.py  qec.py  statevector.py  tensor.py  viz.py
scripts/: build-series  render-post
tests/: test_bernstein_vazirani.py  test_channels.py  test_circuit.py  test_controlled_operator.py  test_dense.py  test_density.py  test_deutsch_jozsa.py  test_entanglement.py  test_gates.py  test_grover.py  test_guards.py  test_measurement.py  test_phase_estimation.py  test_qec.py  test_qft.py  test_qft_circuit.py  test_qft_qiskit.py  test_qiskit_differential.py  test_scaffolding.py  test_shor_continued_fraction.py  test_shor_factor.py  test_shor_modmul.py  test_shor_order.py  (+4 more)
(+13 files in other folders)
